--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home Page</title>
-</head>
-<body>
-<h1>{{ welcomeMessage }}</h1>
+{{> header}}
+<h1>{{ screamIt welcomeMessage}}</h1>
+
+    {{> footer}}
 </body>
 </html>
